事务回滚了,凡是需要调用下游服务的服务，都需要传递XID

--- a/xa-sample/springboot-feign-seata-xa/springboot-feign-seata-storage/src/main/resources/application.properties
+++ b/xa-sample/springboot-feign-seata-xa/springboot-feign-seata-storage/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.username=${mysql.user:root}
 spring.datasource.password=${mysql.password:123456}
 seata.application-id=springboot-feign-seata-storage
 seata.tx-service-group=my_test_tx_group
+seata.enabled=true
