--- a/at-sample/springboot-dubbo-seata/springboot-dubbo-seata-business/pom.xml
+++ b/at-sample/springboot-dubbo-seata/springboot-dubbo-seata-business/pom.xml
@@ -37,10 +37,11 @@
             <version>1.7.32</version>
         </dependency>
 
+        <!--原有的日志依赖版本[1.2.13]在启动的时候有冲突,fuck! 升高版本也冲突-->
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.2.13</version>
+            <version>1.3.14</version>
         </dependency>
 
         <dependency>
