--- a/at-sample/springboot-dubbo-seata/springboot-dubbo-seata-business/pom.xml
+++ b/at-sample/springboot-dubbo-seata/springboot-dubbo-seata-business/pom.xml
@@ -27,18 +27,19 @@
     </parent>
     <artifactId>springboot-dubbo-seata-business</artifactId>
     <version>2.1.0</version>
+    <!--这个项目的编译JDK版本降到JDK8运行！-->
     <name>springboot-dubbo-seata-business</name>
     <description>springboot-dubbo-seata-business</description>
 
     <dependencies>
-        <dependency>
+        <!--<dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>1.7.32</version>
-        </dependency>
+        </dependency>-->
 
         <!--原有的日志依赖版本[1.2.13]在启动的时候有冲突,fuck! 升高版本也冲突-->
-        <dependency>
+        <!--<dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>1.3.14</version>
@@ -53,8 +54,9 @@
             <groupId>org.slf4j</groupId>
             <artifactId>log4j-over-slf4j</artifactId>
             <version>1.7.32</version>
-        </dependency>
+        </dependency>-->
 
+        <!--以下依赖本身就包含了内置的无冲突版本的logback ,mvn dependency:tree -Dincludes=ch.qos.logback 执行可知-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
